--- a/assets/scss/base/_colors.scss
+++ b/assets/scss/base/_colors.scss
@@ -1,6 +1,8 @@
 $color_cherry: hsl(340, 100, 32%);
 $color_cherry-disabled: hsl(340, 32%, 32%);
 $color_cherry--dark: hsl(340, 100, 22%);
+$color_complete: hsl(122, 100%, 32%);
+$color_progress: hsl(202, 100%, 32%);
 
 $color_red: hsl(0, 100, 32%);
 $color_orange: hsl(30, 100, 32%);
