--- a/assets/css/anuncio-nuevo.css
+++ b/assets/css/anuncio-nuevo.css
@@ -95,3 +95,59 @@ li {
 .bootstrap-maxlength {
   color: #a35200;
 }
+
+.panel-image-progress {
+  width: 7em;
+  height: 8em;
+  margin: 0.25em;
+}
+
+.panel-image {
+  width: 100%;
+  height: 7em;
+  background-color: lightgray;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.imagen_preview {
+  max-width: 100%;
+  max-height: 100%;
+  padding: 0.25em;
+}
+
+.panel-image--icon:hover {
+  cursor: pointer;
+}
+
+.panel-image--div_progreso {
+  background-color: lightgray;
+  border-radius: 4px;
+  width: 100%;
+  height: 1em;
+  margin-top: 0.15em;
+}
+
+.panel-image--bar_progreso {
+  border-radius: 4px;
+  background-color: #0067a3;
+  width: 0;
+  height: 100%;
+  font-size: 0.6em;
+  text-align: center;
+  color: white;
+}
+
+.panel-image--div-delete {
+  width: 100%;
+  text-align: center;
+}
+
+.icon-delete {
+  height: 1.25em;
+}
+.icon-delete:hover {
+  cursor: pointer;
+}
