--- a/assets/scss/anuncio-nuevo.scss
+++ b/assets/scss/anuncio-nuevo.scss
@@ -54,3 +54,66 @@
 .bootstrap-maxlength {
 	color: $color_orange;
 }
+
+.panel-image-progress {
+	width: 7em;
+	height: 8em;
+	margin: 0.25em;
+}
+
+.panel-image {
+	width: 100%;
+	height: 7em;
+	background-color: lightgray;
+	border-radius: $border_radius;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.imagen_preview {
+	max-width: 100%;
+	max-height: 100%;
+	padding: 0.25em;
+}
+
+.panel-image--icon {
+	//background-color: red;
+	&:hover {
+		cursor: pointer;
+	}
+}
+
+.panel-image--div_progreso {
+	background-color: lightgray;
+	border-radius: $border_radius;
+	width: 100%;
+	height: 1em;
+	margin-top: 0.15em;
+}
+
+.panel-image--bar_progreso {
+	border-radius: $border_radius;
+	background-color: $color_progress;
+	width: 0;
+	//max-width: 100%;
+	height: 100%;
+	font-size: 0.6em;
+	text-align: center;
+	color: white;
+}
+
+.panel-image--div-delete {
+	width: 100%;
+	//background-color: red;
+
+	text-align: center;
+}
+
+.icon-delete {
+	height: 1.25em;
+
+	&:hover {
+		cursor: pointer;
+	}
+}
