--- a/assets/css/anuncio-nuevo.css
+++ b/assets/css/anuncio-nuevo.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 *,
 *::before,
 *::after {
@@ -42,50 +43,7 @@ li {
   display: none;
 }
 
-/* ANUNCIO PREVIEW*/
-.icon-label {
-  display: inline-block;
-  vertical-align: text-top;
-}
-
-#titulo_preview {
-  word-break: break-all;
-  word-wrap: break-word;
-}
-
-.icon-label {
-  vertical-align: baseline;
-}
-
-.anuncio-nuevo-preview_icon {
-  height: 1.5em;
-  display: inline-block;
-}
-
-#anuncio_preview {
-  border-style: solid;
-  border-width: 1px;
-  border-color: lightgray;
-  border-radius: 4px;
-  word-break: break-all;
-  word-wrap: break-word;
-  padding: 0.5em;
-}
-
-.carousel-inner {
-  max-height: 20em;
-}
-
-.carousel-control-prev,
-.carousel-control-next {
-  width: 50%;
-}
-
-.carousel-inner {
-  padding: 1em;
-  max-width: 40em;
-}
-
+/* Formulario Nuevo Anuncio*/
 #div_telefono_preview,
 #div_celular_preview,
 #div_correo_preview {
@@ -150,4 +108,76 @@ li {
 }
 .icon-delete:hover {
   cursor: pointer;
+}
+
+.pulpox-message--principal {
+  text-align: center;
+  width: 100%;
+  color: #a30036;
+}
+
+/* ANUNCIO PREVIEW*/
+.icon-label {
+  display: inline-block;
+  vertical-align: text-top;
+}
+
+#titulo_preview {
+  word-break: break-all;
+  word-wrap: break-word;
+}
+
+.icon-label {
+  vertical-align: baseline;
+}
+
+.anuncio-nuevo-preview_icon {
+  height: 1.5em;
+  display: inline-block;
+}
+
+#anuncio_preview {
+  border-style: solid;
+  border-width: 1px;
+  border-color: lightgray;
+  border-radius: 4px;
+  word-break: break-all;
+  word-wrap: break-word;
+  padding: 0.5em;
+}
+
+/* CAROUSEL DE IMÁGENES*/
+.carousel-control-prev,
+.carousel-control-next {
+  width: 50%;
+}
+
+.carousel {
+  width: 20em;
+  height: 18em;
+}
+
+.carousel .carousel-item {
+  background-color: lightgray;
+}
+
+.carousel-inner {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  text-align: center;
+}
+
+.carousel-item {
+  height: 100%;
+  width: 100%;
+}
+
+.carousel-inner--img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.carousel-control-prev {
+  color: orange;
 }
