--- a/assets/css/anuncio-nuevo.css
+++ b/assets/css/anuncio-nuevo.css
@@ -22,14 +22,45 @@ li {
   list-style: none;
 }
 
+h1 {
+  font-size: xx-large;
+  font-weight: 700;
+  color: #444446;
+}
+
 .btn-pulpox-primary {
   background-color: #a30036;
   color: white;
+  box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
+}
+.btn-pulpox-primary:hover {
+  color: white;
+  background-color: #cc0044;
+}
+.btn-pulpox-primary:active {
+  color: white;
+  background-color: #700025;
+}
+
+.btn-pulpox-primary--line {
+  border-color: #a30036;
+  color: #a30036;
+  box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
+}
+.btn-pulpox-primary--line:hover {
+  background-color: red;
+  color: white;
+  background-color: #cc0044;
+}
+.btn-pulpox-primary--line:active {
+  color: white;
+  background-color: #700025;
 }
 
 .btn-pulpox-secondary {
   background-color: #a35200;
   color: white;
+  box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
 }
 
 .btn-pulpox-primary-disabled {
@@ -180,4 +211,22 @@ li {
 
 .carousel-control-prev {
   color: orange;
+}
+
+#nuevo_anuncio_previo {
+  box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.62);
+  padding: 2em;
+}
+
+#modalidad_preview,
+#estado_ciudad,
+#seccion_apartado {
+  font-size: medium;
+  font-weight: 700;
+}
+
+#modalidad_mensaje--div {
+  font-size: medium;
+  color: gray;
+  text-align: center;
 }
