--- a/assets/scss/anuncio-nuevo.scss
+++ b/assets/scss/anuncio-nuevo.scss
@@ -144,3 +144,24 @@
 .carousel-control-prev {
 	color: orange;
 }
+
+#nuevo_anuncio_previo {
+	box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.62);
+	padding: 2em;
+}
+
+#titulo_preview {
+}
+
+#modalidad_preview,
+#estado_ciudad,
+#seccion_apartado {
+	font-size: medium;
+	font-weight: 700;
+}
+
+#modalidad_mensaje--div {
+	font-size: medium;
+	color: gray;
+	text-align: center;
+}
