--- a/assets/scss/base/_config.scss
+++ b/assets/scss/base/_config.scss
@@ -23,16 +23,57 @@ li {
 	list-style: none;
 }
 
+h1 {
+	font-size: xx-large;
+	font-weight: 700;
+	color: $color_dark;
+}
+
 $border_radius: 4px;
 
 .btn-pulpox-primary {
 	background-color: $color_cherry;
 	color: white;
+	-webkit-box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
+	-moz-box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
+	box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
+
+	&:hover {
+		color: white;
+		background-color: $color_cherry-active;
+	}
+
+	&:active {
+		color: white;
+		background-color: $color_cherry--dark;
+	}
+}
+
+.btn-pulpox-primary--line {
+	border-color: $color_cherry;
+	color: $color_cherry;
+	-webkit-box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
+	-moz-box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
+	box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
+
+	&:hover {
+		background-color: red;
+		color: white;
+		background-color: $color_cherry-active;
+	}
+
+	&:active {
+		color: white;
+		background-color: $color_cherry--dark;
+	}
 }
 
 .btn-pulpox-secondary {
 	background-color: $color_orange;
 	color: white;
+	-webkit-box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
+	-moz-box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
+	box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
 }
 
 .btn-pulpox-primary-disabled {
