--- a/assets/scss/main-menu.scss
+++ b/assets/scss/main-menu.scss
@@ -2,8 +2,54 @@
 
 .main-menu {
 	background-color: $color_cherry;
+	box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.62);
 }
 
 .main-menu a {
 	color: white;
+}
+
+.navbar-pulpox .navbar-toggler-icon {
+	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, .75)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+#main-menu-toggler {
+	text-align: right;
+}
+
+.nav-item {
+	&:hover {
+		background-color: $color_cherry-active;
+		.nav-link {
+			color: white;
+		}
+	}
+
+	&:active {
+		background-color: $color_cherry--dark;
+		margin: 0;
+	}
+}
+
+#boton-cuenta {
+	background-color: $color_orange;
+	border: 0;
+}
+
+#dropdown_menu {
+	float: right;
+
+	.dropdown-menu {
+		background-color: $color_orange-dark;
+		padding: 0;
+		left: -4.5em;
+		margin-top: 0.25em;
+	}
+
+	.dropdown-item {
+		&:hover {
+			background-color: $color_orange-active;
+			color: white;
+		}
+	}
 }
