--- a/assets/css/mis-anuncios.css
+++ b/assets/css/mis-anuncios.css
@@ -1,3 +1,7 @@
+/*  #A30036 */
+/* #E67300 */
+/*$color_orange: hsl(39, 100, 32%); */
+/* #a35200 */
 *,
 *::before,
 *::after {
@@ -24,7 +28,7 @@ li {
 h1 {
   font-size: xx-large;
   font-weight: 700;
-  color: #444446;
+  color: #58585a;
 }
 
 .btn-pulpox-primary {
@@ -34,36 +38,57 @@ h1 {
 }
 .btn-pulpox-primary:hover {
   color: white;
-  background-color: #cc0044;
+  background-color: #8f0030;
 }
 .btn-pulpox-primary:active {
   color: white;
-  background-color: #700025;
+  background-color: #750027;
 }
 
 .btn-pulpox-primary--line {
-  border-color: #a30036;
-  color: #a30036;
-  box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
+  border-color: #e67300 !important;
+  color: #e67300 !important;
+  box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62) !important;
 }
 .btn-pulpox-primary--line:hover {
-  background-color: red;
   color: white;
-  background-color: #cc0044;
+  background-color: #8f0030;
 }
 .btn-pulpox-primary--line:active {
   color: white;
-  background-color: #700025;
+  background-color: #750027;
 }
 
 .btn-pulpox-secondary {
-  background-color: #a35200;
-  color: white;
+  background-color: #e67300 !important;
+  color: white !important;
   box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
+}
+.btn-pulpox-secondary:hover {
+  color: white !important;
+  background-color: #cc6600 !important;
+}
+.btn-pulpox-secondary:active {
+  color: white !important;
+  background-color: #b35900 !important;
+}
+
+.btn-pulpox-secondary--line {
+  border-color: #e67300 !important;
+  color: #e67300 !important;
+  box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62) !important;
+}
+.btn-pulpox-secondary--line:hover {
+  color: white !important;
+  background-color: #cc6600 !important;
+}
+.btn-pulpox-secondary--line:active {
+  color: white !important;
+  background-color: #b35900 !important;
 }
 
 .btn-pulpox-primary-disabled {
-  background-color: #6c3749;
+  background-color: #562938;
   color: white;
 }
 
@@ -80,12 +105,12 @@ h1 {
 }
 
 .page-link {
-  background-color: #a35200;
+  background-color: #e67300;
   color: WHITE;
 }
 
 .page-link {
-  background-color: #a35200;
+  background-color: #e67300;
   color: WHITE;
 }
 
