--- a/assets/libs/jquery-confirm-v3.3.4/css/jquery-confirm.css
+++ b/assets/libs/jquery-confirm-v3.3.4/css/jquery-confirm.css
@@ -109,20 +109,24 @@ body[class*="jconfirm-no-scroll-"] {
 @-webkit-keyframes type-blue {
 	1%,
 	100% {
-		border-color: #3498db;
+		/*border-color: #3498db;*/ /*pulpox*/
+		border-color: #a30036;
 	}
 	50% {
-		border-color: #5faee3;
+		/*border-color: #5faee3;*/ /*pulpox*/
+		border-color: #a30036;
 	}
 }
 
 @keyframes type-blue {
 	1%,
 	100% {
-		border-color: #3498db;
+		/*border-color: #3498db;*/ /*pulpox*/
+		border-color: #a30036;
 	}
 	50% {
-		border-color: #5faee3;
+		/*border-color: #5faee3;*/ /*pulpox*/
+		border-color: #a30036;
 	}
 }
 
@@ -234,7 +238,9 @@ body[class*="jconfirm-no-scroll-"] {
 }
 
 .jconfirm .jconfirm-box.jconfirm-type-blue {
-	border-top: solid 7px #3498db;
+	border-top: solid 7px rebeccapurple;
+	/* border-top: solid 7px #3498db; */
+
 	-webkit-animation-name: type-blue;
 	animation-name: type-blue;
 }
@@ -451,8 +457,9 @@ body[class*="jconfirm-no-scroll-"] {
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
-	border-radius: 4px;
+	/*border-radius: 4px;*/ /*pulpox*/
 	min-height: 1em;
+	/*
 	-webkit-transition: opacity 0.1s ease, background-color 0.1s ease,
 		color 0.1s ease, background 0.1s ease, -webkit-box-shadow 0.1s ease;
 	transition: opacity 0.1s ease, background-color 0.1s ease, color 0.1s ease,
@@ -462,8 +469,9 @@ body[class*="jconfirm-no-scroll-"] {
 	transition: opacity 0.1s ease, background-color 0.1s ease, color 0.1s ease,
 		box-shadow 0.1s ease, background 0.1s ease, -webkit-box-shadow 0.1s ease;
 	-webkit-tap-highlight-color: transparent;
-	border: none;
-	background-image: none;
+	*/ /*pulpox*/
+	/*border: none;*/ /*pulpox*/
+	/*background-image: none;*/
 }
 
 .jconfirm .jconfirm-box .jconfirm-buttons button.btn-blue {
@@ -519,7 +527,7 @@ body[class*="jconfirm-no-scroll-"] {
 }
 
 .jconfirm .jconfirm-box .jconfirm-buttons button.btn-default {
-	background-color: #ecf0f1;
+	/*background-color: #ecf0f1;*/ /*pulpox*/
 	color: #000;
 	text-shadow: none;
 	-webkit-transition: background 0.2s;
@@ -569,7 +577,8 @@ body[class*="jconfirm-no-scroll-"] {
 }
 
 .jconfirm .jconfirm-box.jconfirm-type-blue .jconfirm-title-c .jconfirm-icon-c {
-	color: #3498db !important;
+	/*color: #3498db !important;*/ /*pulpox*/
+	color: #e67300 !important;
 }
 
 .jconfirm .jconfirm-box.jconfirm-type-green .jconfirm-title-c .jconfirm-icon-c {
@@ -633,10 +642,10 @@ body[class*="jconfirm-no-scroll-"] {
 
 .jconfirm.jconfirm-white .jconfirm-box .jconfirm-buttons button,
 .jconfirm.jconfirm-light .jconfirm-box .jconfirm-buttons button {
-	text-transform: uppercase;
+	/*	text-transform: uppercase; 
 	font-size: 14px;
 	font-weight: bold;
-	text-shadow: none;
+	text-shadow: none; */ /*pulpox*/
 }
 
 .jconfirm.jconfirm-white .jconfirm-box .jconfirm-buttons button.btn-default,
