--- a/assets/css/mianuncio-nuevo-preview.css
+++ b/assets/css/mianuncio-nuevo-preview.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*  #A30036 */
 /* #E67300 */
 /*$color_orange: hsl(39, 100, 32%); */
@@ -115,45 +116,89 @@ h1 {
   margin-top: 0.75em;
 }
 
-.pulpox-table--thead {
-  background-color: #a30036;
-  color: white;
+.icon-label {
+  display: inline-block;
+  vertical-align: text-top;
+}
+
+#titulo_preview {
+  word-break: break-all;
+  word-wrap: break-word;
+}
+
+.icon-label {
+  vertical-align: baseline;
+}
+
+.anuncio-nuevo-preview_icon {
+  height: 1.5em;
+  display: inline-block;
+}
+
+#anuncio_preview {
+  border-style: solid;
+  border-width: 1px;
+  border-color: lightgray;
   border-radius: 4px;
+  word-break: break-all;
+  word-wrap: break-word;
+  padding: 0.5em;
 }
 
-.page-link {
-  background-color: #e67300;
-  color: WHITE;
+/* CAROUSEL DE IMÁGENES*/
+.carousel-control-prev,
+.carousel-control-next {
+  width: 50%;
 }
 
-.page-link {
-  background-color: #e67300;
-  color: WHITE;
+.carousel {
+  width: 18em;
+  height: 18em;
 }
 
-.active {
-  background-color: #a30036;
-  color: WHITE;
+.carousel .carousel-item {
+  background-color: lightgray;
 }
 
-.pulpox-table--titulo {
-  color: black;
+.carousel-inner {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  text-align: center;
 }
 
-#mis-anuncios-table_length select {
-  display: inline-block;
-  width: 5em;
+.carousel-item {
+  height: 100%;
+  width: 100%;
 }
 
-#mis-anuncios-table_filter input {
-  display: inline-block;
-  width: 15em;
+.carousel-inner--img {
+  max-width: 100%;
+  max-height: 100%;
 }
 
-#pulpox-icon--ver:hover {
-  cursor: pointer;
+.carousel-control-prev {
+  color: orange;
+}
+
+#nuevo_anuncio_previo {
+  box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.62);
+  padding: 2em;
+}
+
+#modalidad_preview,
+#estado_ciudad,
+#seccion_apartado {
+  font-size: medium;
+  font-weight: 700;
 }
 
 .div-contacto {
   display: none;
+}
+
+#modalidad_mensaje--div {
+  font-size: medium;
+  color: gray;
+  text-align: center;
 }
