--- a/assets/scss/mis-anuncios.scss
+++ b/assets/scss/mis-anuncios.scss
@@ -1,27 +1,25 @@
 @import "../../../pulpox_ads_nuevo/assets/scss/base/config.scss";
 
 .pulpox-table--thead {
-	background-color: $color_cherry;
+	background-color: $color_primary;
 	color: white;
 	border-radius: $border_radius;
 }
 
 .page-link {
 	//Elemento MDB
-	background-color: $color_orange;
+	background-color: $color_secondary;
 	color: WHITE;
-}
 
-.page-link {
-	//Elemento MDB
-	background-color: $color_orange;
-	color: WHITE;
-}
+	&:hover {
+		background-color: $color_secondary_light;
+		color: WHITE;
+	}
 
-.active {
-	//Elemento MDB
-	background-color: $color_cherry;
-	color: WHITE;
+	&:active {
+		background-color: $color_secondary_dark;
+		color: WHITE;
+	}
 }
 
 .pulpox-table--titulo {
