--- a/assets/css/main-menu.css
+++ b/assets/css/main-menu.css
@@ -1,7 +1,3 @@
-/*  #A30036 */
-/* #E67300 */
-/*$color_orange: hsl(39, 100, 32%); */
-/* #a35200 */
 .main-menu {
   background-color: #a30036;
   box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.62);
@@ -20,18 +16,18 @@
 }
 
 .nav-item:hover {
-  background-color: #8f0030;
+  background-color: #b0003b;
 }
 .nav-item:hover .nav-link {
   color: white;
 }
 .nav-item:active {
-  background-color: #750027;
+  background-color: #a30036;
   margin: 0;
 }
 
 #boton-cuenta {
-  background-color: #e67300;
+  background-color: #f03a0c;
   border: 0;
 }
 
@@ -39,12 +35,12 @@
   float: right;
 }
 #dropdown_menu .dropdown-menu {
-  background-color: #b35900;
+  background-color: #8a2107;
   padding: 0;
   left: -4.5em;
   margin-top: 0.25em;
 }
 #dropdown_menu .dropdown-item:hover {
-  background-color: #cc6600;
+  background-color: #f03a0c;
   color: white;
 }
