--- a/assets/css/mianuncio-ver.css
+++ b/assets/css/mianuncio-ver.css
@@ -1,8 +1,4 @@
 @charset "UTF-8";
-/*  #A30036 */
-/* #E67300 */
-/*$color_orange: hsl(39, 100, 32%); */
-/* #a35200 */
 *,
 *::before,
 *::after {
@@ -29,7 +25,7 @@ li {
 h1 {
   font-size: xx-large;
   font-weight: 700;
-  color: #58585a;
+  color: #3d3c3c;
 }
 
 .btn-pulpox-primary {
@@ -39,72 +35,176 @@ h1 {
 }
 .btn-pulpox-primary:hover {
   color: white;
-  background-color: #8f0030;
+  background-color: #f00050;
 }
 .btn-pulpox-primary:active {
   color: white;
-  background-color: #750027;
+  background-color: #630021;
 }
 
 .btn-pulpox-primary--line {
-  border-color: #e67300 !important;
-  color: #e67300 !important;
-  box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62) !important;
+  border-color: #a30036 !important;
+  color: #a30036 !important;
+  box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
 }
 .btn-pulpox-primary--line:hover {
   color: white;
-  background-color: #8f0030;
+  background-color: #f00050;
 }
 .btn-pulpox-primary--line:active {
   color: white;
-  background-color: #750027;
+  background-color: #630021;
+}
+
+.btn-pulpox-primary-disabled {
+  background-color: #631805;
+  color: white;
 }
 
 .btn-pulpox-secondary {
-  background-color: #e67300 !important;
+  background-color: #f03a0c !important;
   color: white !important;
   box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
 }
 .btn-pulpox-secondary:hover {
   color: white !important;
-  background-color: #cc6600 !important;
+  background-color: #b02a09 !important;
 }
 .btn-pulpox-secondary:active {
   color: white !important;
-  background-color: #b35900 !important;
+  background-color: #8a2107 !important;
 }
 
 .btn-pulpox-secondary--line {
-  border-color: #e67300 !important;
-  color: #e67300 !important;
-  box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62) !important;
+  border-color: #b02a09 !important;
+  color: #b02a09 !important;
+  box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
 }
 .btn-pulpox-secondary--line:hover {
   color: white !important;
-  background-color: #cc6600 !important;
+  background-color: #f03a0c !important;
 }
 .btn-pulpox-secondary--line:active {
   color: white !important;
-  background-color: #b35900 !important;
+  background-color: #631805 !important;
 }
 
-.btn-pulpox-primary-disabled {
-  background-color: #562938;
-  color: white;
+.btn-pulpox-danger {
+  background-color: #a30010 !important;
+  color: white !important;
+  box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
+}
+.btn-pulpox-danger:hover {
+  color: white !important;
+  background-color: #f00018 !important;
+}
+.btn-pulpox-danger:active {
+  color: white !important;
+  background-color: #63000a !important;
+}
+
+.btn-pulpox-danger--line {
+  border-color: #a30010 !important;
+  color: #a30010 !important;
+  box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
+}
+.btn-pulpox-danger--line:hover {
+  color: white !important;
+  background-color: #f00018 !important;
+}
+.btn-pulpox-danger--line:active {
+  color: white !important;
+  background-color: #63000a !important;
+}
+
+.btn-pulpox-success {
+  background-color: #00a316 !important;
+  color: white !important;
+  box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
+}
+.btn-pulpox-success:hover {
+  color: white !important;
+  background-color: #00f01f !important;
+}
+.btn-pulpox-success:active {
+  color: white !important;
+  background-color: #00630d !important;
+}
+
+.btn-pulpox-success--line {
+  border-color: #00a316 !important;
+  color: #00a316 !important;
+  box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
+}
+.btn-pulpox-success--line:hover {
+  color: white !important;
+  background-color: #00f01f !important;
+}
+.btn-pulpox-success--line:active {
+  color: white !important;
+  background-color: #00630d !important;
+}
+
+.btn-pulpox-warning {
+  background-color: #a39600 !important;
+  color: white !important;
+  box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
+}
+.btn-pulpox-warning:hover {
+  color: white !important;
+  background-color: #f0dc00 !important;
+}
+.btn-pulpox-warning:active {
+  color: white !important;
+  background-color: #635b00 !important;
+}
+
+.btn-pulpox-warning--line {
+  border-color: #a39600 !important;
+  color: #a39600 !important;
+  box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
+}
+.btn-pulpox-warning--line:hover {
+  color: #635b00 !important;
+  background-color: #f0dc00 !important;
+}
+.btn-pulpox-warning--line:active {
+  color: white !important;
+  background-color: #635b00 !important;
+}
+
+.btn-pulpox-info {
+  background-color: #005fa3 !important;
+  color: white !important;
+  box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
+}
+.btn-pulpox-info:hover {
+  color: white !important;
+  background-color: #008cf0 !important;
+}
+.btn-pulpox-info:active {
+  color: white !important;
+  background-color: #00508a !important;
+}
+
+.btn-pulpox-info--line {
+  border-color: #005fa3 !important;
+  color: #005fa3 !important;
+  box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
+}
+.btn-pulpox-info--line:hover {
+  color: white !important;
+  background-color: #008cf0 !important;
+}
+.btn-pulpox-info--line:active {
+  color: white !important;
+  background-color: #00508a !important;
 }
 
 .pulpox-invalid-feedback {
-  color: red;
+  color: #f00018;
   font-size: 0.75em;
   display: none;
-}
-
-.div-mensaje {
-  border-radius: 4px;
-  border-color: lightgrey;
-  border-style: solid;
-  border-width: 0.5px;
-  padding: 0.5em;
 }
 
 .div-mensaje,
@@ -116,14 +216,39 @@ h1 {
   margin-top: 0.75em;
 }
 
-.icon-label {
-  display: inline-block;
-  vertical-align: text-top;
-}
-
 #titulo_preview {
   word-break: break-all;
   word-wrap: break-word;
+  color: #3d3c3c;
+}
+
+.div-modSecApa {
+  color: #575555;
+}
+
+.div-mensaje {
+  color: #575555;
+  border-radius: 4px;
+  border-color: lightgrey;
+  border-style: solid;
+  border-width: 0.5px;
+  padding: 0.5em;
+}
+
+#modalidad_mensaje--div {
+  font-size: medium;
+  color: gray;
+  text-align: center;
+}
+
+.div-contacto {
+  display: none;
+  color: #3d3c3c;
+}
+
+.icon-label {
+  display: inline-block;
+  vertical-align: text-top;
 }
 
 .icon-label {
@@ -135,14 +260,16 @@ h1 {
   display: inline-block;
 }
 
-#anuncio_preview {
-  border-style: solid;
-  border-width: 1px;
-  border-color: lightgray;
-  border-radius: 4px;
-  word-break: break-all;
-  word-wrap: break-word;
-  padding: 0.5em;
+#nuevo_anuncio_previo {
+  box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
+  padding: 2em;
+}
+
+#modalidad_preview,
+#estado_ciudad,
+#seccion_apartado {
+  font-size: medium;
+  font-weight: 700;
 }
 
 /* CAROUSEL DE IMÁGENES*/
@@ -181,24 +308,11 @@ h1 {
   color: orange;
 }
 
-#nuevo_anuncio_previo {
-  box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.62);
-  padding: 2em;
-}
-
-#modalidad_preview,
-#estado_ciudad,
-#seccion_apartado {
-  font-size: medium;
-  font-weight: 700;
-}
-
-.div-contacto {
-  display: none;
-}
-
-#modalidad_mensaje--div {
-  font-size: medium;
-  color: gray;
-  text-align: center;
+.div-informacion-anuncio {
+  padding: 1em;
+  color: #3d3c3c;
+  border-style: solid;
+  border-width: 1px;
+  border-color: lightgray;
+  border-radius: 4px;
 }
