--- a/assets/libs/jquery-confirm-v3.3.4/css/jquery-confirm.css
+++ b/assets/libs/jquery-confirm-v3.3.4/css/jquery-confirm.css
@@ -110,11 +110,11 @@ body[class*="jconfirm-no-scroll-"] {
 	1%,
 	100% {
 		/*border-color: #3498db;*/ /*pulpox*/
-		border-color: #a30036;
+		border-color: #005fa3;
 	}
 	50% {
 		/*border-color: #5faee3;*/ /*pulpox*/
-		border-color: #a30036;
+		border-color: #005fa3;
 	}
 }
 
@@ -122,51 +122,51 @@ body[class*="jconfirm-no-scroll-"] {
 	1%,
 	100% {
 		/*border-color: #3498db;*/ /*pulpox*/
-		border-color: #a30036;
+		border-color: #005fa3;
 	}
 	50% {
 		/*border-color: #5faee3;*/ /*pulpox*/
-		border-color: #a30036;
+		border-color: #005fa3;
 	}
 }
 
 @-webkit-keyframes type-green {
 	1%,
 	100% {
-		border-color: #2ecc71;
+		border-color: #00a316;
 	}
 	50% {
-		border-color: #54d98c;
+		border-color: #00a316;
 	}
 }
 
 @keyframes type-green {
 	1%,
 	100% {
-		border-color: #2ecc71;
+		border-color: #00a316;
 	}
 	50% {
-		border-color: #54d98c;
+		border-color: #00a316;
 	}
 }
 
 @-webkit-keyframes type-red {
 	1%,
 	100% {
-		border-color: #e74c3c;
+		border-color: #a30010;
 	}
 	50% {
-		border-color: #ed7669;
+		border-color: #a30010;
 	}
 }
 
 @keyframes type-red {
 	1%,
 	100% {
-		border-color: #e74c3c;
+		border-color: #a30010;
 	}
 	50% {
-		border-color: #ed7669;
+		border-color: #a30010;
 	}
 }
 
@@ -246,13 +246,13 @@ body[class*="jconfirm-no-scroll-"] {
 }
 
 .jconfirm .jconfirm-box.jconfirm-type-green {
-	border-top: solid 7px #2ecc71;
+	border-top: solid 7px #00a316;
 	-webkit-animation-name: type-green;
 	animation-name: type-green;
 }
 
 .jconfirm .jconfirm-box.jconfirm-type-red {
-	border-top: solid 7px #e74c3c;
+	border-top: solid 7px #a30010;
 	-webkit-animation-name: type-red;
 	animation-name: type-red;
 }
@@ -483,12 +483,12 @@ body[class*="jconfirm-no-scroll-"] {
 }
 
 .jconfirm .jconfirm-box .jconfirm-buttons button.btn-blue:hover {
-	background-color: #2980b9;
+	background-color: #005fa3;
 	color: #fff;
 }
 
 .jconfirm .jconfirm-box .jconfirm-buttons button.btn-green {
-	background-color: #2ecc71;
+	background-color: #00a316;
 	color: #fff;
 	text-shadow: none;
 	-webkit-transition: background 0.2s;
@@ -496,12 +496,12 @@ body[class*="jconfirm-no-scroll-"] {
 }
 
 .jconfirm .jconfirm-box .jconfirm-buttons button.btn-green:hover {
-	background-color: #27ae60;
+	background-color: #00a316;
 	color: #fff;
 }
 
 .jconfirm .jconfirm-box .jconfirm-buttons button.btn-red {
-	background-color: #e74c3c;
+	background-color: #a30010;
 	color: #fff;
 	text-shadow: none;
 	-webkit-transition: background 0.2s;
@@ -509,7 +509,7 @@ body[class*="jconfirm-no-scroll-"] {
 }
 
 .jconfirm .jconfirm-box .jconfirm-buttons button.btn-red:hover {
-	background-color: #c0392b;
+	background-color: #a30010;
 	color: #fff;
 }
 
@@ -566,7 +566,7 @@ body[class*="jconfirm-no-scroll-"] {
 }
 
 .jconfirm .jconfirm-box.jconfirm-type-red .jconfirm-title-c .jconfirm-icon-c {
-	color: #e74c3c !important;
+	color: #a30010 !important;
 }
 
 .jconfirm
@@ -578,11 +578,11 @@ body[class*="jconfirm-no-scroll-"] {
 
 .jconfirm .jconfirm-box.jconfirm-type-blue .jconfirm-title-c .jconfirm-icon-c {
 	/*color: #3498db !important;*/ /*pulpox*/
-	color: #e67300 !important;
+	color: #005fa3 !important;
 }
 
 .jconfirm .jconfirm-box.jconfirm-type-green .jconfirm-title-c .jconfirm-icon-c {
-	color: #2ecc71 !important;
+	color: #00a316 !important;
 }
 
 .jconfirm
