--- a/assets/scss/base/_config.scss
+++ b/assets/scss/base/_config.scss
@@ -34,95 +34,220 @@ $border_width: 0.5px;
 $border_color: lightgrey;
 $border_style: solid;
 
-.btn-pulpox-primary {
-	background-color: $color_cherry;
-	color: white;
+@mixin shadow_div {
 	-webkit-box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
 	-moz-box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
 	box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
+}
+
+@mixin border_div {
+	border-style: solid;
+	border-width: 1px;
+	border-color: lightgray;
+	border-radius: $border_radius;
+}
+
+.btn-pulpox-primary {
+	background-color: $color_primary;
+	color: white;
+	@include shadow_div;
 
 	&:hover {
 		color: white;
-		background-color: $color_cherry-active;
+		background-color: $color_primary_light;
 	}
 
 	&:active {
 		color: white;
-		background-color: $color_cherry--dark;
+		background-color: $color_primary_dark;
 	}
 }
 
 .btn-pulpox-primary--line {
-	border-color: $color_orange !important;
-	color: $color_orange !important;
-	-webkit-box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62) !important;
-	-moz-box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62) !important;
-	box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62) !important;
+	border-color: $color_primary !important;
+	color: $color_primary !important;
+	@include shadow_div;
 
 	&:hover {
 		color: white;
-		background-color: $color_cherry-active;
+		background-color: $color_primary_light;
 	}
 
 	&:active {
 		color: white;
-		background-color: $color_cherry--dark;
-	}
-}
-
-.btn-pulpox-secondary {
-	background-color: $color_orange !important;
-	color: white !important;
-	-webkit-box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
-	-moz-box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
-	box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62);
-
-	&:hover {
-		color: white !important;
-		background-color: $color_orange-active !important;
-	}
-
-	&:active {
-		color: white !important;
-		background-color: $color_orange-dark !important;
-	}
-}
-
-.btn-pulpox-secondary--line {
-	border-color: $color_orange !important;
-	color: $color_orange !important;
-	-webkit-box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62) !important;
-	-moz-box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62) !important;
-	box-shadow: 0px 10px 7px -7px rgba(0, 0, 0, 0.62) !important;
-
-	&:hover {
-		color: white !important;
-		background-color: $color_orange-active !important;
-	}
-
-	&:active {
-		color: white !important;
-		background-color: $color_orange-dark !important;
+		background-color: $color_primary_dark;
 	}
 }
 
 .btn-pulpox-primary-disabled {
-	background-color: $color_cherry-disabled;
+	background-color: $color_secondary_dark;
 	color: white;
 }
 
-.pulpox-invalid-feedback {
-	color: red;
-	font-size: 0.75em;
-	display: none;
+.btn-pulpox-secondary {
+	background-color: $color_secondary_light !important;
+	color: white !important;
+	@include shadow_div;
+
+	&:hover {
+		color: white !important;
+		background-color: $color_secondary_medium_light !important;
+	}
+
+	&:active {
+		color: white !important;
+		background-color: $color_secondary_medium_dark !important;
+	}
 }
 
-.div-mensaje {
-	border-radius: $border_radius;
-	border-color: $border_color;
-	border-style: $border_style;
-	border-width: $border_width;
-	padding: 0.5em;
+.btn-pulpox-secondary--line {
+	border-color: $color_secondary_medium_light !important;
+	color: $color_secondary_medium_light !important;
+	@include shadow_div;
+
+	&:hover {
+		color: white !important;
+		background-color: $color_secondary_light !important;
+	}
+
+	&:active {
+		color: white !important;
+		background-color: $color_secondary_dark !important;
+	}
+}
+
+.btn-pulpox-danger {
+	background-color: $color_danger !important;
+	color: white !important;
+	@include shadow_div;
+
+	&:hover {
+		color: white !important;
+		background-color: $color_danger_light !important;
+	}
+
+	&:active {
+		color: white !important;
+		background-color: $color_danger_dark !important;
+	}
+}
+
+.btn-pulpox-danger--line {
+	border-color: $color_danger !important;
+	color: $color_danger !important;
+	@include shadow_div;
+
+	&:hover {
+		color: white !important;
+		background-color: $color_danger_light !important;
+	}
+
+	&:active {
+		color: white !important;
+		background-color: $color_danger_dark !important;
+	}
+}
+
+.btn-pulpox-success {
+	background-color: $color_success !important;
+	color: white !important;
+	@include shadow_div;
+
+	&:hover {
+		color: white !important;
+		background-color: $color_success_light !important;
+	}
+
+	&:active {
+		color: white !important;
+		background-color: $color_success_dark !important;
+	}
+}
+
+.btn-pulpox-success--line {
+	border-color: $color_success !important;
+	color: $color_success !important;
+	@include shadow_div;
+
+	&:hover {
+		color: white !important;
+		background-color: $color_success_light !important;
+	}
+
+	&:active {
+		color: white !important;
+		background-color: $color_success_dark !important;
+	}
+}
+
+.btn-pulpox-warning {
+	background-color: $color_warning !important;
+	color: white !important;
+	@include shadow_div;
+
+	&:hover {
+		color: white !important;
+		background-color: $color_warning_light !important;
+	}
+
+	&:active {
+		color: white !important;
+		background-color: $color_warning_dark !important;
+	}
+}
+
+.btn-pulpox-warning--line {
+	border-color: $color_warning !important;
+	color: $color_warning !important;
+	@include shadow_div;
+
+	&:hover {
+		color: #635b00 !important;
+		background-color: $color_warning_light !important;
+	}
+
+	&:active {
+		color: white !important;
+		background-color: $color_warning_dark !important;
+	}
+}
+
+.btn-pulpox-info {
+	background-color: $color_info !important;
+	color: white !important;
+	@include shadow_div;
+
+	&:hover {
+		color: white !important;
+		background-color: $color_info_light !important;
+	}
+
+	&:active {
+		color: white !important;
+		background-color: $color_info_dark !important;
+	}
+}
+
+.btn-pulpox-info--line {
+	border-color: $color_info !important;
+	color: $color_info !important;
+	@include shadow_div;
+
+	&:hover {
+		color: white !important;
+		background-color: $color_info_light !important;
+	}
+
+	&:active {
+		color: white !important;
+		background-color: $color_info_dark !important;
+	}
+}
+
+.pulpox-invalid-feedback {
+	color: $color_danger_light;
+	font-size: 0.75em;
+	display: none;
 }
 
 .div-mensaje,
@@ -132,4 +257,96 @@ $border_style: solid;
 .div-modalidad-mensaje,
 .div-carousel {
 	margin-top: 0.75em;
+}
+
+#titulo_preview {
+	word-break: break-all;
+	word-wrap: break-word;
+	color: $color_dark;
+}
+
+.div-modSecApa {
+	color: $color_medium_dark;
+}
+
+.div-mensaje {
+	color: $color_medium_dark;
+	border-radius: $border_radius;
+	border-color: $border_color;
+	border-style: $border_style;
+	border-width: $border_width;
+	padding: 0.5em;
+}
+
+#modalidad_mensaje--div {
+	font-size: medium;
+	color: gray;
+	text-align: center;
+}
+
+.div-contacto {
+	display: none;
+	color: $color_dark;
+}
+
+.icon-label {
+	display: inline-block;
+	vertical-align: text-top;
+}
+
+.icon-label {
+	vertical-align: baseline;
+}
+
+.anuncio-nuevo-preview_icon {
+	height: 1.5em;
+	display: inline-block;
+}
+
+#nuevo_anuncio_previo {
+	@include shadow_div;
+	padding: 2em;
+}
+
+#modalidad_preview,
+#estado_ciudad,
+#seccion_apartado {
+	font-size: medium;
+	font-weight: 700;
+}
+
+/* CAROUSEL DE IMÁGENES*/
+
+.carousel-control-prev,
+.carousel-control-next {
+	width: 50%;
+}
+
+.carousel {
+	width: 18em;
+	height: 18em;
+}
+
+.carousel .carousel-item {
+	background-color: lightgray;
+}
+
+.carousel-inner {
+	width: 100%;
+	height: 100%;
+	margin: auto;
+	text-align: center;
+}
+
+.carousel-item {
+	height: 100%;
+	width: 100%;
+}
+
+.carousel-inner--img {
+	max-width: 100%;
+	max-height: 100%;
+}
+.carousel-control-prev {
+	color: orange;
 }
