--- a/assets/scss/base/_colors.scss
+++ b/assets/scss/base/_colors.scss
@@ -3,29 +3,36 @@ $color_primary_medium_light: #b0003b;
 $color_primary: #a30036;
 $color_primary_medium_dark: #8a002e;
 $color_primary_dark: #630021;
+$color_primary_opaque: #a3526d;
 
 $color_secondary_light: #f03a0c;
 $color_secondary_medium_light: #b02a09;
 $color_secondary: #a32708;
 $color_secondary_medium_dark: #8a2107;
 $color_secondary_dark: #631805;
+$color_secondary_opaque: #a36252;
 
 $color_danger_light: #f00018;
 $color_danger: #a30010;
 $color_danger_dark: #63000a;
+$color_danger_opaque: #a3525a;
 
 $color_success_light: #00f01f;
 $color_success: #00a316;
 $color_success_dark: #00630d;
+$color_success_opaque: #52a35c;
 
 $color_warning_light: #f0dc00;
 $color_warning: #a39600;
 $color_warning_dark: #635b00;
+$color_warning_opaque: #a39c52;
 
 $color_info_light: #008cf0;
 $color_info: #005fa3;
 $color_info_dark: #00508a;
+$color_info_opaque: #5281a3;
 
 $color_light_dark: #636161;
 $color_medium_dark: #575555;
 $color_dark: #3d3c3c;
+$color_dark_opaque: #cfcaca;
