--- a/assets/scss/mianuncio-nuevo.scss
+++ b/assets/scss/mianuncio-nuevo.scss
@@ -21,7 +21,7 @@
 .panel-image {
 	width: 100%;
 	height: 7em;
-	background-color: lightgray;
+	background-color: $color_gray_light;
 	border-radius: $border_radius;
 	display: flex;
 	justify-content: center;
@@ -35,13 +35,15 @@
 }
 
 .panel-image--icon {
+	filter: $color_primary_filter;
+	opacity: 0.5;
 	&:hover {
 		cursor: pointer;
 	}
 }
 
 .panel-image--div_progreso {
-	background-color: lightgray;
+	background-color: $color_gray_light;
 	border-radius: $border_radius;
 	width: 100%;
 	height: 1em;
@@ -50,7 +52,7 @@
 
 .panel-image--bar_progreso {
 	border-radius: $border_radius;
-	background-color: $color_success;
+	background-color: $color_info;
 	width: 0;
 	height: 100%;
 	font-size: 0.6em;
@@ -101,7 +103,7 @@
 #anuncio_preview {
 	border-style: solid;
 	border-width: 1px;
-	border-color: lightgray;
+	border-color: $color_gray_light;
 	border-radius: $border_radius;
 	word-break: break-all;
 	word-wrap: break-word;
@@ -121,7 +123,7 @@
 }
 
 .carousel .carousel-item {
-	background-color: lightgray;
+	background-color: $color_gray_light;
 }
 
 .carousel-inner {
