--- a/assets/css/mianuncio-nuevo.css
+++ b/assets/css/mianuncio-nuevo.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+@font-face {
+  font-family: "PulpoxFonts";
+  src: url("/pulpox_ads_nuevo/assets/fonts/GoogleSans-Regular.woff");
+}
 *,
 *::before,
 *::after {
@@ -7,6 +11,7 @@
 
 body {
   margin: 0;
+  font-family: "PulpoxFonts", "GoogleSans-Regular";
 }
 
 a {
@@ -233,7 +238,7 @@ h1 {
 .div-mensaje {
   color: #575555;
   border-radius: 4px;
-  border-color: lightgrey;
+  border-color: #a30036;
   border-style: solid;
   border-width: 0.5px;
   padding: 0.5em;
@@ -241,13 +246,19 @@ h1 {
 
 #modalidad_mensaje--div {
   font-size: medium;
-  color: gray;
+  color: #575555;
   text-align: center;
 }
 
 .div-contacto {
   display: none;
   color: #3d3c3c;
+}
+
+.div-titulo {
+  border-bottom: solid;
+  border-color: #a30036;
+  border-width: 0.5px;
 }
 
 .icon-label {
@@ -260,7 +271,7 @@ h1 {
 }
 
 .anuncio-nuevo-preview_icon {
-  height: 1.5em;
+  height: 2.5em;
   display: inline-block;
 }
 
@@ -306,7 +317,7 @@ h1 {
 }
 
 .carousel .carousel-item {
-  background-color: lightgray;
+  background-color: #f1f1f1;
 }
 
 .carousel-inner {
@@ -332,6 +343,13 @@ h1 {
 
 .pulpox-icon {
   filter: invert(14%) sepia(79%) saturate(7289%) hue-rotate(334deg) brightness(63%) contrast(104%);
+  height: 1.5em;
+  width: 1.5em;
+  display: inline-block;
+}
+
+.icon-delete {
+  filter: invert(6%) sepia(83%) saturate(6889%) hue-rotate(350deg) brightness(116%) contrast(104%);
 }
 
 /* Formulario Nuevo Anuncio*/
@@ -354,7 +372,7 @@ h1 {
 .panel-image {
   width: 100%;
   height: 7em;
-  background-color: lightgray;
+  background-color: #f1f1f1;
   border-radius: 4px;
   display: flex;
   justify-content: center;
@@ -367,12 +385,16 @@ h1 {
   padding: 0.25em;
 }
 
+.panel-image--icon {
+  filter: invert(14%) sepia(79%) saturate(7289%) hue-rotate(334deg) brightness(63%) contrast(104%);
+  opacity: 0.5;
+}
 .panel-image--icon:hover {
   cursor: pointer;
 }
 
 .panel-image--div_progreso {
-  background-color: lightgray;
+  background-color: #f1f1f1;
   border-radius: 4px;
   width: 100%;
   height: 1em;
@@ -381,7 +403,7 @@ h1 {
 
 .panel-image--bar_progreso {
   border-radius: 4px;
-  background-color: #00a316;
+  background-color: #005fa3;
   width: 0;
   height: 100%;
   font-size: 0.6em;
@@ -430,7 +452,7 @@ h1 {
 #anuncio_preview {
   border-style: solid;
   border-width: 1px;
-  border-color: lightgray;
+  border-color: #f1f1f1;
   border-radius: 4px;
   word-break: break-all;
   word-wrap: break-word;
@@ -449,7 +471,7 @@ h1 {
 }
 
 .carousel .carousel-item {
-  background-color: lightgray;
+  background-color: #f1f1f1;
 }
 
 .carousel-inner {
