--- a/assets/scss/base/_config.scss
+++ b/assets/scss/base/_config.scss
@@ -289,6 +289,7 @@ $border_style: solid;
 	border-style: $border_style;
 	border-width: $border_width;
 	padding: 0.5em;
+	white-space: pre;
 }
 
 #modalidad_mensaje--div {
