--- a/assets/css/inicio.css
+++ b/assets/css/inicio.css
@@ -381,4 +381,18 @@ h1 {
 
 .pulpox-titulo-filtro {
   font-weight: bold;
+  color: #00508a;
+}
+
+tr:hover {
+  background-color: #e6f4ff;
+}
+tr:hover a {
+  color: #00508a !important;
+}
+tr:hover .modalidad_anuncio {
+  color: #00508a !important;
+}
+tr:hover .datos_anuncio {
+  color: #00508a !important;
 }
